# llm_cap_research

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  dvc.yaml  netlify.toml  params.yaml  pyproject.toml
.dvc/: config
data/interim/: .gitignore
data/processed/: .gitignore
data/raw/: Acton-MA.pdf.dvc  Amherst-MA.pdf.dvc  Arlington-MA.pdf.dvc  Ashland-MA.pdf.dvc  Attleboro-MA.pdf.dvc  Boston-MA.pdf.dvc  Brookline-MA.pdf.dvc  Burlington-VT.pdf.dvc  Cambridge-MA.pdf.dvc  Concord-MA.pdf.dvc  Dedham-MA.pdf.dvc  Gloucester-MA.pdf.dvc  Harvard-MA.pdf.dvc  Lincoln-MA.pdf.dvc  Massachusetts-MA.pdf.dvc  Medford-MA.pdf.dvc  Melrose-MA.pdf.dvc  Natick-MA.pdf.dvc  Wayland-MA.pdf.dvc  Wellesley-MA.pdf.dvc  Weston-MA.pdf.dvc
docs/: .gitignore  Makefile  conf.py  data_source_table.py  getting-started.md  make.bat  project-organization.md
llm_cap_research/: __init__.py  analyze.py  logging_config.py
llm_cap_research/data/: make_dataset.py
llm_learning/: __init__.py  analyze.py  consolidate_tables.py  logging_config.py
llm_learning/data/: dbt_profile_template.yaml  init_dbt_profile.py  make_dataset.py
notebooks/: langchain_tutorial.ipynb
