[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".dvc",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

# Same as Black.
line-length = 88
indent-width = 4

# Assume Python 3.8
target-version = "py38"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["E4", "E7", "E9", "F"]
ignore = []

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

# Enable auto-formatting of code examples in docstrings. Markdown,
# reStructuredText code/literal blocks and doctests are all supported.
#
# This is currently disabled by default, but it is planned for this
# to be opt-out in the future.
docstring-code-format = false

# Set the line length limit used when formatting code snippets in
# docstrings.
#
# This only has an effect when the `docstring-code-format` setting is
# enabled.
docstring-code-line-length = "dynamic"



[tool.poetry]
name = "llm_learning"
version = "0.1.0"
description = "Learning how to do document extraction with LLMs"
authors = ["Alex Hasha <alex@hashadatascience.com>"]
readme = "README.md"
packages = [{include = "llm_learning"}]

[tool.poetry.scripts]
llm_learning = "llm_learning.analyze:app"

[tool.poetry.dependencies]
click = "^8.0.4"
dvc = "^3.38.0"
dvc-gs = "^3.0.1"
dvc-ssh = "^4.1.1"
jupyter = "^1.0.0"
matplotlib = "^3.7.1"
numpy = "^1.23.0"
python = "~3.11"
pandas = "^2.0.0"
pyarrow = "^14.0.1"
sqlalchemy = "^1.4.32"
scikit-learn = "^1.2.2"
python-dotenv = "^1.0.0"
openai = "^1.30.1"
pypdf = "^4.2.0"
langchain = {version = "~0.1", extras = ["all"]}
huggingface-hub = "^0.23.0"
langchain-openai = "^0.1.7"
pymupdf = "^1.24.4"
faiss-cpu = "^1.8.0"
gspread = "^6.1.2"
oauth2client = "^4.1.3"
typer = "^0.12.3"
ruff = "^0.4.5"
langsmith = "^0.1.63"

[tool.poetry.group.pdfminer.dependencies]
langchain-mistralai = "^0.1.7"
python-magic = "^0.4.27"
beautifulsoup4 = "^4.12.3"
lxml = "^5.2.2"
unstructured = "^0.14.0"
pdfminer-six = "^20231228"
pillow-heif = "^0.16.0"
opencv-python = "^4.9.0.80"
pdf2image = "^1.17.0"
pytesseract = "^0.3.10"
pikepdf = "^8.15.1"


[tool.poetry.group.dev.dependencies]
sphinx = "^6.1.3"
nbsphinx = "^0.9.1"
pre-commit = "^3.2.2"
myst-parser = "^1.0.0"
sphinx-rtd-theme = "^1.2.0"
flake8 = "^6.0.0"
isort = "^5.12.0"
brunette = "^0.2.8"
pytest = "^7.3.1"
sphinxcontrib-mermaid = "^0.8.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
